# testkit

./: .envrc  Cargo.toml  README.md  clippy.toml  default.nix  deny.toml  flake.nix  rust-toolchain.toml  rustfmt.toml  shell.nix
.github/workflows/: CI.yaml  Release.yaml
crates/macros/: Cargo.toml
crates/macros/src/: attr.rs  expand.rs  lib.rs
crates/macros/tests/: ui.rs  usage.rs
crates/macros/tests/ui/: container_as_callable.rs  invalid_container.rs  invalid_container.stderr  invalid_setup.rs  invalid_setup.stderr  invalid_teardown.rs  invalid_teardown.stderr
crates/testkit/: Cargo.toml
crates/testkit/src/: lib.rs  macros.rs
hack/: publish
