# 📦🦋 charted TestKit: testing library for Axum services with testcontainers support
# Copyright (c) 2024 Noelware, LLC. <team@noelware.org>
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name = "charted-testkit"
description = "📦🦋 TestKit is a testing library for Axum services with testcontainers support"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
http2 = ["hyper/http2", "axum/http2", "hyper-util/http2"]

[dependencies]
async-trait = "0.1.80"
axum = "0.7.5"
charted-testkit-macros = { version = "0.1.0", path = "../macros" }
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1.3", features = ["tokio", "client"] }
testcontainers = "0.16.7"
tokio = "1.37.0"
tower = "0.4.13"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["rt", "macros"] }
